# bs-parallel-solver

./: .gitignore  CMakeLists.txt  README.md
examples/: params.json
include/: black_scholes.h
src/: assemble.c  assemble_cn.c  grid.c  io.c  main.c  timestep.c  timestep.cu
tools/: bench.sh  error_check.py  plot_error.py  plot_speedup.py  refine_driver.py
